--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -35,12 +35,16 @@ check-ban: "&cВы заблокировали игрока которого пр
 # Если игрок ввёл команду кроме (/cheater, /uncheck) при проверке
 disabled-chat: "&cВы не можете использовать чат при проверке!"
 
+# Если админ вызвал игрока на проверку (отправляется админу)
+check-execute-admin: "&cВы вызвали на проверку игрока %player%!"
+
 # Если игрока вызвали на проверку (отправляется в чат)
 # %admin% возвращает ник админка
 check-execute:
   - "&cВас вызвали на проверку, используйте команду:"
   - "&c/check discord %admin% [Ваш дискорд]"
-  - "&cЛибо через %minutes% минут вы будете забанены!"
+  - "&cЛибо /cheater чтобы сознать в читах"
+  - "&cЕсли вы будете игнорировать через %minutes% минут вы будете забанены!"
 
 # Если админ ввёл команду /uncheck [ник] (отправляется игроку)
 uncheck-player: "&aВы прошли проверку, админ вас отпустил!"
